# root2-finding

./: .clang-format  01257128_hw1_root2.tex  README.md  makefile  pyproject.toml
include/: FloatUtils.h  Newton.h  Polynomial2D.h
src/: main.py  newton_cli.cpp
src/cpplib/: Newton.cpp  Polynomial2D.cpp
src/pydisplay/: __init__.py  func.py  newton.py  plot.py  plot_utils.py
