[project]
name = "root2-finding"
version = "1.0"
description = ""
authors = [
    {name = "YuanOwO",email = "yuan@yuanowo.xyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
